--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </fieldset>
 
     </form>
-    <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
 
