back and next button

--- a/theme2/index2.html
+++ b/theme2/index2.html
@@ -32,7 +32,8 @@
                         <input id="radio2" type="radio" name="radio" />live 10 lives that last 100 years each?
                     </label>
                     <div class="text-center fade-in">
-                        <div class="button">Next</div>
+                        <div class="buttonBack">Back</div>
+                        <div class="buttonNext">Next</div>
                     </div>
                 </form>
             </div>
@@ -40,6 +41,7 @@
                 <div class="title">Step 3</div>
                 <div class="description">Check your email for the game results.</div>
                 <div class="text-center">
+                    <div class="buttonBack">Back</div>
                     <div class="button">Done!</div>
                 </div>
             </div>
